@@ -4909,7 +4909,7 @@ Note: leave it blank for default.</source>
     </message>
     <message>
         <location line="+158"/>
-        <source>&lt;b&gt;First startup wizrad&lt;/b&gt;</source>
+        <source>&lt;b&gt;First startup wizard&lt;/b&gt;</source>
         <translation>&lt;b&gt;اولین شروع به کار برنامه ی کمکی نصب&lt;/b&gt;</translation>
     </message>
     <message>
