@@ -5479,7 +5479,7 @@ Nota: deixe em branco para o padrão.</translation>
     </message>
     <message>
         <location line="+158"/>
-        <source>&lt;b&gt;First startup wizrad&lt;/b&gt;</source>
+        <source>&lt;b&gt;First startup wizard&lt;/b&gt;</source>
         <translation>&lt;b&gt;Primeiro início do assistente&lt;/b&gt;</translation>
     </message>
     <message>
